#18 Publishing drafts from the backend
